--- a/home_page/home.html
+++ b/home_page/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lost and Found</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
     <div class="container">
@@ -15,7 +16,7 @@
                 <img src="glass.png" alt="Lost and Found">
                 <p>Lost and Found</p>
             </div>
-            <li><a href="/">Home</a> </li>
+            <li><a href="/" class="active">Home</a> </li>
             <li><a href="/lost_item"> Lost Item</a></li>
             <li><a href="/found"> Found Item</a></li>
             <li><a href="/recentlost"> Recent lost and Found</a></li>
