--- a/recentlost/lostandfound.html
+++ b/recentlost/lostandfound.html
@@ -7,9 +7,27 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Lost and Found items</title>
    <link rel="stylesheet" href="lostandfound.css">
+   <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
+   <div class="container">
+      <ul class="nav">
+          <div class="logo">
+              <img src="glass.png" alt="Lost and Found">
+              <p>Lost and Found</p>
+          </div>
+          <li><a href="/" >Home</a> </li>
+          <li><a href="/lost_item"> Lost Item</a></li>
+          <li><a href="/found"> Found Item</a></li>
+          <li><a href="/recentlost" class="active"> Recent lost and Found</a></li>
+      </ul>
+      <div class="search">
+          <input type="text" placeholder="Search">
+          <button class="btnsearch">Search</button>
+      </div>
+  </div>
+
    <div class="first">
       <h1>Featured lost items</h1>
       <div class="lost">
