--- a/home_page/home.html
+++ b/home_page/home.html
@@ -13,8 +13,7 @@
     <div class="container">
         <ul class="nav">
             <div class="logo">
-                <img src="glass.png" alt="Lost and Found">
-                <p>Lost and Found</p>
+                <a href="/"><img src="be.png" alt="Lost and Found"></a>
             </div>
             <li><a href="/" class="active">Home</a> </li>
             <li><a href="/lost_item"> Lost Item</a></li>
@@ -31,26 +30,8 @@
         <div class="box1 box">
             <h1>Welcome to
                 <span class="effect1">
-                    <span class="effect">P</span>
-                    <span class="effect">D</span>
-                    <span class="effect">P</span>
-                    <span class="effect">M</span></span>
-                <span class="effect2">
-                    <span class="effect">I</span>
-                    <span class="effect">I</span>
-                    <span class="effect">I</span>
-                    <span class="effect">T</span>
-                    <span class="effect">D</span>
-                    <span class="effect">M</span> </span>
-                <span class="effect3">
-                    <span class="effect">J</span>
-                    <span class="effect">A</span>
-                    <span class="effect">B</span>
-                    <span class="effect">A</span>
-                    <span class="effect">L</span>
-                    <span class="effect">P</span>
-                    <span class="effect">U</span>
-                    <span class="effect">R</span> </span>
+                   PDPM IIITDM JABALPUR 
+                </span>
                     Lost and Found
                 <div class="content">
                     <p>Here you can submit your Lost and Found request.</p>
