--- a/found/found.html
+++ b/found/found.html
@@ -14,8 +14,7 @@
     <div class="container">
         <ul class="nav">
             <div class="logo">
-                <img src="glass.png" alt="Lost and Found">
-                <p>Lost and Found</p>
+                <a href="/"><img src="be.png" alt="Lost and Found"></a>
             </div>
             <li><a href="/">Home</a> </li>
             <li><a href="/lost_item"> Lost Item</a></li>
