--- a/home_page/home.html
+++ b/home_page/home.html
@@ -13,7 +13,7 @@
     <div class="container">
         <ul class="nav">
             <div class="logo">
-                <a href="/"><img src="be.png" alt="Lost and Found"></a>
+                <a href="/"><img src="start.png" alt="Lost and Found"></a>
             </div>
             <li><a href="/" class="active">Home</a> </li>
             <li><a href="/lost_item"> Lost Item</a></li>
