--- a/lost_item/lostitem.html
+++ b/lost_item/lostitem.html
@@ -37,7 +37,13 @@
                 </div>
                 <label for="category">Category</label>
                 <div>
-                    <input type="text" name="category" id="category">
+                    <select name="category" id="category">
+                      <option value="select">--Select--</option>
+                      <option value="general_item">General Items</option>
+                      <option value="electronics">Electronics</option>
+                      <option value="personal">Personal Accessories</option>
+                      <option value="key">Keys</option>
+                    </select>
                 </div>
                 <label for="datelost">Date Lost</label>
                 <div>
